Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/pp/gstmessage.pp

procedure gst_message_parse_device_removed(message:PGstMessage; device:PPGstDevice);cdecl;external;
{ DEVICE_CHANGED  }
function gst_message_new_device_changed(src:PGstObject; device:PGstDevice; changed_device:PGstDevice):PGstMessage;cdecl;external;
procedure gst_message_parse_device_changed(message:PGstMessage; device:PPGstDevice; changed_device:PPGstDevice);cdecl;external;
{ DEVICE_MONITOR_STARTED  }
function gst_message_new_device_monitor_started(src:PGstObject; success:Tgboolean):PGstMessage;cdecl;external;
procedure gst_message_parse_device_monitor_started(message:PGstMessage; success:Pgboolean);cdecl;external;
{ PROPERTY_NOTIFY  }
(* Const before type ignored *)
function gst_message_new_property_notify(src:PGstObject; property_name:Pgchar; val:PGValue):PGstMessage;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure gst_message_parse_property_notify(message:PGstMessage; object:PPGstObject; property_name:PPgchar; property_value:PPGValue);cdecl;external;
{ STREAM_COLLECTION  }
function gst_message_new_stream_collection(src:PGstObject; collection:PGstStreamCollection):PGstMessage;cdecl;external;
procedure gst_message_parse_stream_collection(message:PGstMessage; collection:PPGstStreamCollection);cdecl;external;
{ STREAMS_SELECTED  }
function gst_message_new_streams_selected(src:PGstObject; collection:PGstStreamCollection):PGstMessage;cdecl;external;
procedure gst_message_streams_selected_add(message:PGstMessage; stream:PGstStream);cdecl;external;
procedure gst_message_parse_streams_selected(message:PGstMessage; collection:PPGstStreamCollection);cdecl;external;
function gst_message_streams_selected_get_size(message:PGstMessage):Tguint;cdecl;external;
function gst_message_streams_selected_get_stream(message:PGstMessage; idx:Tguint):PGstStream;cdecl;external;
{ REDIRECT  }
(* Const before type ignored *)
function gst_message_new_redirect(src:PGstObject; location:Pgchar; tag_list:PGstTagList; entry_struct:PGstStructure):PGstMessage;cdecl;external;
(* Const before type ignored *)
procedure gst_message_add_redirect_entry(message:PGstMessage; location:Pgchar; tag_list:PGstTagList; entry_struct:PGstStructure);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure gst_message_parse_redirect_entry(message:PGstMessage; entry_index:Tgsize; location:PPgchar; tag_list:PPGstTagList; entry_struct:PPGstStructure);cdecl;external;
function gst_message_get_num_redirect_entries(message:PGstMessage):Tgsize;cdecl;external;
{ INSTANT_RATE_REQUEST  }
function gst_message_new_instant_rate_request(src:PGstObject; rate_multiplier:Tgdouble):PGstMessage;cdecl;external;
procedure gst_message_parse_instant_rate_request(message:PGstMessage; rate_multiplier:Pgdouble);cdecl;external;
{//////G_DEFINE_AUTOPTR_CLEANUP_FUNC    (GstMessage, gst_message_unref) }
{$endif}
{ __GST_MESSAGE_H__  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_IS_MESSAGE(obj : longint) : longint;
begin
  GST_IS_MESSAGE:=GST_IS_MINI_OBJECT_TYPE(obj,GST_TYPE_MESSAGE);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_MESSAGE_CAST(obj : longint) : PGstMessage;
begin
  GST_MESSAGE_CAST:=PGstMessage(obj);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE(obj : longint) : longint;
begin
  GST_MESSAGE:=GST_MESSAGE_CAST(obj);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_TYPE(message : longint) : longint;
begin
  GST_MESSAGE_TYPE:=(GST_MESSAGE_CAST(message))^._type;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_TYPE_IS_EXTENDED(message : longint) : longint;
begin
  GST_MESSAGE_TYPE_IS_EXTENDED:= not ( not (((GST_MESSAGE_CAST(message))^._type) and GST_MESSAGE_EXTENDED));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_TYPE_NAME(message : longint) : longint;
begin
  GST_MESSAGE_TYPE_NAME:=gst_message_type_get_name(GST_MESSAGE_TYPE(message));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_TIMESTAMP(message : longint) : longint;
begin
  GST_MESSAGE_TIMESTAMP:=(GST_MESSAGE_CAST(message))^.timestamp;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_SRC(message : longint) : longint;
begin
  GST_MESSAGE_SRC:=(GST_MESSAGE_CAST(message))^.src;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_SEQNUM(message : longint) : longint;
begin
  GST_MESSAGE_SEQNUM:=(GST_MESSAGE_CAST(message))^.seqnum;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_MESSAGE_SRC_NAME(message : longint) : longint;
var
   if_local1 : longint;
(* result types are not known *)
begin
  if GST_MESSAGE_SRC(message) then
    if_local1:=GST_OBJECT_NAME(GST_MESSAGE_SRC(message))
  else
    if_local1:='(NULL)';
  GST_MESSAGE_SRC_NAME:=if_local1;
end;


end.
